# teoria_grafow_projekt

./: Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/pkgs/app/: main.py
backend/pkgs/bfs/: bfs.py
backend/pkgs/dfs/: dfs.py
backend/pkgs/helpers/: graph_reader.py
backend/tests/: test_bfs.py  test_dfs.py  test_graph.py  test_graph_reader.py
backend/tests/data/: road-test-CA.txt
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/dockerfile-assets/: nginx.conf  server.conf
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts
frontend/src/assets/: env.js  env.template.js
frontend/src/environments/: environment.development.ts  environment.production.ts  environment.ts
pkgs/app/: main.py
pkgs/bfs/: bfs.py
pkgs/data/: graph.py  node.py
pkgs/dfs/: dfs.py
pkgs/helpers/: graph_reader.py
tests/: test_bfs.py  test_dfs.py  test_graph.py  test_graph_reader.py  test_node.py
