[project]
name = "bfs_dfs_search"
version = "0.0.1"
description = "BFS and DFS search algorithms implementation"
authors = [
    { name = "Jan Zawada", email = "jan.d.zawada@gmail.com" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["bfs", "dfs", "search", "graph", "algorithms"]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
