[project]
name = "bfs_dfs_search"
version = "0.0.1"
description = "BFS and DFS search algorithms implementation"
authors = [
    { name = "Jan Zawada", email = "jan.d.zawada@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["bfs", "dfs", "search", "graph", "algorithms"]
requires-python = ">=3.12"

[project.license]
text = """
MIT License

Copyright (c) 2025 Jan Zawada

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:
...
"""


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
